--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,8 @@
 
 :root {
   --base-50: oklch(0.985 0.0013 286.84);
-  --base-100: oklch(0.967 0.0027 286.38);
+  /* --base-100: oklch(0.967 0.0027 286.38); */
+    --base-100: #e9f1ff;
   --base-200: oklch(0.92 0.0053 286.32);
   --base-300: oklch(0.871 0.008 286.29);
   --base-400: oklch(0.705 0.012 286.07);
