--- a/app/globals.css
+++ b/app/globals.css
@@ -198,6 +198,18 @@
   }
 }
 
+/* Custom scrollbar */
+/* ::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: hsl(var(--sidebar-accent));
+  border-radius: 4px;
+}
+::-webkit-scrollbar-track {
+  background-color: hsl(var(--sidebar-background));
+} */
+
 @layer components {
   /* .tabs-trigger {
     font-family: var(--font-manrope), sans-serif;
